MonetDB5/src/mal/Tests/tst040.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2003, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## Variables names may be identical to type names, but
## then they also have to bear the same value 
#
#str := "hello";
#int := 1:sht;
#flt := "wrong";
#i   := true;
#
#
!ERROR: MALresolve:Admin.main[2]:type mismatch int := sht
!ERROR: MALresolve:Admin.main[3]:type mismatch flt := str
function Admin.main():int; #0  (main:int)
    str := "hello"; #1  (str:str)<-($2:str)
    int := 1; #2  unknown (int:int)<-($4:sht)
    flt := "wrong"; #3  unknown (flt:flt)<-($6:str)
    i := true; #4  (i:bit)<-($8:bit)
end main; #5  
>